--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,7 +34,7 @@ body {
   background: rgb(236, 255, 251);
   font-size: 16px;
 }
-#container {
+.container {
   width: 1200px;
   height: 100%;
   margin: 0 auto;
