--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ body {
   width: 1200px;
   height: 100%;
   margin: 0 auto;
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .row {
@@ -299,6 +300,7 @@ body {
 #header_bottom .boxLank_poster ul {
   display: flex;
   justify-content: space-between;
+  flex-flow: wrap;
 }
 #header_bottom .boxLank_poster ul li {
   position: relative;
@@ -308,8 +310,7 @@ body {
 }
 #header_bottom .boxLank_poster ul li .posterArea {
   position: relative;
-  width: 270px;
-  height: 380px;
+  height: 100%;
 }
 #header_bottom .boxLank_poster ul li .posterArea .posterLanking {
   position: absolute;
@@ -339,7 +340,6 @@ body {
 }
 #header_bottom .boxLank_poster ul li .posterArea .posterDetail a {
   display: block;
-  width: 100%;
   height: 40px;
   margin-bottom: 18px;
   border: 1px solid #fff;
@@ -386,7 +386,7 @@ body {
   }
 }
 @media screen and (max-width: 1200px) {
-  #container {
+  .container {
     width: 100%;
   }
   .headerTop_ad {
@@ -413,11 +413,14 @@ body {
   #header_video .secMain {
     padding-left: 40px;
   }
+  #header_bottom .boxLank_poster {
+    padding: 0 20px 0;
+  }
   #header_bottom .boxOffice .boxLank {
-    padding-left: 20px;
+    padding-left: 40px;
   }
   #header_bottom .boxOffice .boxMore {
-    padding-right: 20px;
+    padding-right: 40px;
   }
 }
 
