--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,9 @@ body {
   margin-right: 20px;
   color: #fff;
 }
+#header .headerMain .headerTop_left a:hover {
+  text-decoration: underline;
+}
 #header .headerMain .headerTop_right {
   order: 3;
   margin-bottom: -25px;
@@ -125,6 +128,9 @@ body {
 #header .headerMain .headerTop_right a {
   margin-left: 20px;
   color: #fff;
+}
+#header .headerMain .headerTop_right a:hover {
+  text-decoration: underline;
 }
 #header .headerMenu {
   position: relative;
@@ -402,6 +408,28 @@ body {
 #section01 .benefit .benefitMore .fa-plus {
   margin-left: 5px;
   color: #aaa;
+}
+#section01 .benefit_area {
+  display: inline-flex;
+}
+#section01 .benefit_area .slider {
+  margin-right: 20px;
+}
+#section01 .benefit_area .slider .slider_01 ul .slideTest {
+  width: 460px;
+  height: 560px;
+  background: orange;
+}
+#section01 .benefit_area .benefit_ad {
+  width: 720px;
+  display: inline-flex;
+  flex-wrap: wrap;
+}
+#section01 .benefit_area .benefit_ad div {
+  width: 350px;
+  height: 270px;
+  background: yellowgreen;
+  border: 1px solid red;
 }
 
 @keyframes motionM {
